tests/files/parser_tests/should_fail/040.cmdr
//Should not parse weird floats
float = 3.3.;